# hayadi_rs

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.yaml  example.env
.github/workflows/: audit.yaml  build.yaml  release.yaml
crates/database/: Cargo.toml
crates/database/entity/src/: person.rs  prelude.rs
crates/database/migration/src/: m20231218_133347_person.rs
database/docs/: setup.md
database/entity/: Cargo.toml
database/entity/src/: mod.rs  picture.rs  prelude.rs
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20231219_164558_picture.rs
src/: configs.rs  constants.rs  databases.rs  main.rs
src/configs/: database.rs
src/utils/: env.rs
