[package]
name = "database"
version = "0.1.0"
authors = ["Mahdi Baghbani <mahdi-baghbani@azadehafzar.io>"]
description = "Hayadi Database"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "entity" }

[dependencies.sea-orm]
version = "0.12"
features = [
    "debug-print",
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
]

[dependencies.uuid]
version = "1.6"
features = [
    "v4",
]

[dev-dependencies]

[dev-dependencies.tokio]
version = "1.35"
features = [
    "rt",
    "macros",
]
